sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:15: error: not found: value j
        j=true
        ^AlgCombSort:20: error: not found: value j
    while(ecart>1 || j==true)
                     ^